--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <title>Pingback Test</title>
-    <link rel="pingback" href="https://blog.divvyhomes.com/xmlrpc.php" />
+  <meta charset="UTF-8" />
+  <title>Pingback Test</title>
+  <link rel="pingback" href="https://blog.divvyhomes.com/xmlrpc.php" />
 </head>
 <body>
-    <h1>This page supports pingbacks!</h1>
+  <h1>This page supports pingbacks!</h1>
+  <p>
+    Here is a link to the target post:
+    <a href="https://blog.divvyhomes.com/rent-to-own-vs-mortgage/">
+      Rent-to-own vs. Mortgage
+    </a>
+  </p>
 </body>
 </html>
