--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1>This page supports pingbacks!</h1>
   <p>
     Here is a link to the target post:
-    <a href="https://blog.divvyhomes.com/">Rent-to-own vs. Mortgage</a>
+    <a href="https://blog.divvyhomes.com">Rent-to-own vs. Mortgage</a>
   </p>
 </body>
 </html>
